--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
                         <div class="mainmenu">
                             <nav id="dropdown">
                                 <ul>
+									<li><a href="/">Главная</a></li>
                                     <li><a href="#tariffs">Тарифы</a></li>
 									<li><a href="#otzivy">Отзывы</a></li>
 									<li><a href="#akcii">Все Акции</a></li>
-									<li><a href="faq.html">Ответы на вопросы</a></li>
+									<li><a href="/faq">Ответы на вопросы</a></li>
 									<li><a href="https://www.tinkoff.ru/mobile-operator/" class="bonus">1000р за перенос номера</a></li>
                                 </ul>
                             </nav>
