--- a/faq.html
+++ b/faq.html
@@ -113,7 +113,7 @@
                         <div class="mainmenu">
                             <nav id="dropdown">
                                 <ul>
-									<li><a href="Tinkoff-Sim.ru">Главная</a></li>
+									<li><a href="/">Главная</a></li>
                                     <li><a href="#tariffs">Тарифы</a></li>
 									<li><a href="#otzivy">Отзывы</a></li>
 									<li><a href="#akcii">Все Акции</a></li>
