--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<li><a href="/">Главная</a></li>
                                     <li><a href="#tariffs">Тарифы</a></li>
 									<li><a href="#otzivy">Отзывы</a></li>
-									<li><a href="#akcii">Все Акции</a></li>
+									<li><a href="#akcii">Акции</a></li>
 									<li><a href="/faq">Ответы на вопросы</a></li>
 									<li><a href="https://www.tinkoff.ru/mobile-operator/" class="bonus">1000р за перенос номера</a></li>
                                 </ul>
