--- a/404.html
+++ b/404.html
@@ -98,8 +98,8 @@
 									<li><a href="Tinkoff-Sim.ru">Главная</a></li>
                                     <li><a href="#tariffs">Тарифы</a></li>
 									<li><a href="#otzivy">Отзывы</a></li>
-									<li><a href="#akcii">Все Акции</a></li>
-									<li><a href="/faq">Ответы на вопросы</a></li>
+									<li><a href="#akcii">Акции</a></li>
+									<li><a href="/faq">FAQ</a></li>
 									<li><a href="https://www.tinkoff.ru/mobile-operator/" class="bonus">1000р за перенос номера</a></li>
                                 </ul>
                             </nav>
@@ -225,36 +225,36 @@
                             <!-- single-latest-post start -->
                             <div class="single-latest-post fix">
                                 <div class="latest-picture floatleft">
-                                    <a href="#" target="#"><img src="img/widget_activation.jpg" alt=""></a>
+                                    <a href="/faq#activ" target="#"><img src="img/widget_activation.jpg" alt=""></a>
                                 </div>
                                 <div class="latest-text floatleft">
                                     <h2 class="sidebar-post-title">АКТИВАЦИЯ</h2>
                                     <p>Как активировать сим-карту</p>
-                                    <a class="read-more" href="">Читать <span><i class="fa fa-chevron-right"></i></span></a>
+                                    <a class="read-more" href="/faq#activ">Читать <span><i class="fa fa-chevron-right"></i></span></a>
                                 </div>
                             </div>
                             <!-- single-latest-post end -->
                             <!-- single-latest-post start -->
                             <div class="single-latest-post fix">
                                 <div class="latest-picture floatleft">
-                                    <a href="#" target="#"><img src="img/widget_number.jpg" alt=""></a>
+                                    <a href="/faq#num" target="#"><img src="img/widget_number.jpg" alt=""></a>
                                 </div>
                                 <div class="latest-text floatleft">
                                     <h2 class="sidebar-post-title">УЗНАТЬ НОМЕР</h2>
                                     <p>Как узнать свой номер телефона</p>
-                                    <a class="read-more" href="">Читать <span><i class="fa fa-chevron-right"></i></span></a>
+                                    <a class="read-more" href="/faq#num">Читать <span><i class="fa fa-chevron-right"></i></span></a>
                                 </div>
                             </div>
                             <!-- single-latest-post end --> 
                             <!-- single-latest-post start -->
                             <div class="single-latest-post fix">
                                 <div class="latest-picture floatleft">
-                                    <a href="#" target="#"><img src="img/widget_block.png" alt=""></a>
+                                    <a href="/faq#zab" target="#"><img src="img/widget_block.png" alt=""></a>
                                 </div>
                                 <div class="latest-text floatleft">
                                     <h2 class="sidebar-post-title">ЗАБЛОКИРОВАТЬ</h2>
                                     <p>Как заблокировать сим-карту</p>
-                                    <a class="read-more" href="">Читать <span><i class="fa fa-chevron-right"></i></span></a>
+                                    <a class="read-more" href="/faq#zab">Читать <span><i class="fa fa-chevron-right"></i></span></a>
                                 </div>
                             </div>
                             <!-- single-latest-post end -->            
