--- a/faq.html
+++ b/faq.html
@@ -116,8 +116,8 @@
 									<li><a href="/">Главная</a></li>
                                     <li><a href="#tariffs">Тарифы</a></li>
 									<li><a href="#otzivy">Отзывы</a></li>
-									<li><a href="#akcii">Все Акции</a></li>
-									<li><a href="/">Ответы на вопросы</a></li>
+									<li><a href="#akcii">Акции</a></li>
+									<li><a href="/">FAQ</a></li>
 									<li><a href="https://www.tinkoff.ru/mobile-operator/" class="bonus">1000р за перенос номера</a></li>
                                 </ul>
                             </nav>
@@ -162,7 +162,7 @@
 						<div class="categories-tag-list margin-top">
                         <h2>Содержание</h2>
                         <p><a href="#activ" class="dot-b">Активация сим-карты Тинькофф Мобайл</a></p>
-                        <p><a href="#tariffs_moscow_spb" class="dot-b">Как проверить баланс и остатки пакетов на Тинькофф Мобайл</a></p>
+                        <p><a href="#bal" class="dot-b">Как проверить баланс и остатки пакетов на Тинькофф Мобайл</a></p>
                         <p><a href="#num" class="dot-b">Как заблокировать сим-карту</a></p>
 						<p><a href="#zab" class="dot-b">Как узнать свой номер телефона</a></p>
                     </div>
@@ -252,36 +252,36 @@
                             <!-- single-latest-post start -->
                             <div class="single-latest-post fix">
                                 <div class="latest-picture floatleft">
-                                    <a href="#" target="#"><img src="img/widget_activation.jpg" alt=""></a>
+                                    <a href="#activ" target="#"><img src="img/widget_activation.jpg" alt=""></a>
                                 </div>
                                 <div class="latest-text floatleft">
                                     <h2 class="sidebar-post-title">АКТИВАЦИЯ</h2>
                                     <p>Как активировать сим-карту</p>
-                                    <a class="read-more" href="">Читать <span><i class="fa fa-chevron-right"></i></span></a>
+                                    <a class="read-more" href="#activ">Читать <span><i class="fa fa-chevron-right"></i></span></a>
                                 </div>
                             </div>
                             <!-- single-latest-post end -->
                             <!-- single-latest-post start -->
                             <div class="single-latest-post fix">
                                 <div class="latest-picture floatleft">
-                                    <a href="#" target="#"><img src="img/widget_number.jpg" alt=""></a>
+                                    <a href="#num" target="#"><img src="img/widget_number.jpg" alt=""></a>
                                 </div>
                                 <div class="latest-text floatleft">
                                     <h2 class="sidebar-post-title">УЗНАТЬ НОМЕР</h2>
                                     <p>Как узнать свой номер телефона</p>
-                                    <a class="read-more" href="">Читать <span><i class="fa fa-chevron-right"></i></span></a>
+                                    <a class="read-more" href="#num">Читать <span><i class="fa fa-chevron-right"></i></span></a>
                                 </div>
                             </div>
                             <!-- single-latest-post end --> 
                             <!-- single-latest-post start -->
                             <div class="single-latest-post fix">
                                 <div class="latest-picture floatleft">
-                                    <a href="#" target="#"><img src="img/widget_block.png" alt=""></a>
+                                    <a href="#zab" target="#"><img src="img/widget_block.png" alt=""></a>
                                 </div>
                                 <div class="latest-text floatleft">
                                     <h2 class="sidebar-post-title">ЗАБЛОКИРОВАТЬ</h2>
                                     <p>Как заблокировать сим-карту</p>
-                                    <a class="read-more" href="">Читать <span><i class="fa fa-chevron-right"></i></span></a>
+                                    <a class="read-more" href="#zab">Читать <span><i class="fa fa-chevron-right"></i></span></a>
                                 </div>
                             </div>
                             <!-- single-latest-post end -->            
