--- a/faq.html
+++ b/faq.html
@@ -114,9 +114,9 @@
                             <nav id="dropdown">
                                 <ul>
 									<li><a href="/">Главная</a></li>
-                                    <li><a href="#tariffs">Тарифы</a></li>
-									<li><a href="#otzivy">Отзывы</a></li>
-									<li><a href="#akcii">Акции</a></li>
+                                    <li><a href="/#tariffs">Тарифы</a></li>
+									<li><a href="/#otzivy">Отзывы</a></li>
+									<li><a href="/#akcii">Акции</a></li>
 									<li><a href="/">FAQ</a></li>
 									<li><a href="https://www.tinkoff.ru/mobile-operator/" class="bonus">1000р за перенос номера</a></li>
                                 </ul>
@@ -187,7 +187,7 @@
 							<li>В приложении Тинькофф Мобайл</li>
 							<li>Позвонить на горячую линию Тинькофф Мобайл и спросить оператора</li>
 							<li>Позвонить на другую свою симку. Или например к друзьям, номер высветится у них.</li></ul>
-							<img src="1000r_horizont.jpg">
+							<img src="img/1000r_horizont.jpg" alt="">
                     </div>
    <!-- single-blog-main end -->         
                 </div>
