--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
         
         <!-- Favicon
         ============================================ -->
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">        
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">        
 
         <!-- CSS  -->
         
