--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         
         <!-- Favicon
         ============================================ -->
-        <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">        
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">        
 
         <!-- CSS  -->
         
