--- a/faq.html
+++ b/faq.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <!--[if IE]><![endif]-->
-<!--[if lt IE 7 ]> <html lang="en" class="ie6">    <![endif]-->
-<!--[if IE 7 ]>    <html lang="en" class="ie7">    <![endif]-->
-<!--[if IE 8 ]>    <html lang="en" class="ie8">    <![endif]-->
-<!--[if IE 9 ]>    <html lang="en" class="ie9">    <![endif]-->
+<!--[if lt IE 7 ]> <html lang="ru" class="ie6">    <![endif]-->
+<!--[if IE 7 ]>    <html lang="ru" class="ie7">    <![endif]-->
+<!--[if IE 8 ]>    <html lang="ru" class="ie8">    <![endif]-->
+<!--[if IE 9 ]>    <html lang="ru" class="ie9">    <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!-->
-<html class="no-js" lang="">
+<html class="no-js" lang="ru">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Тинькофф Мобайл - Оператор Мобильной Связи: Активация сим-карты, Узнать номер, Заблокировать</title>
+        <title>Тинькофф Мобайл - Оператор Связи: Активация сим, Узнать номер, Заблокировать</title>
         <meta name="description" content="Пошаговая инструкция по активации сим-карты Тинькофф Мобайл. Как узнать свой номер телефона? Как заблокировать сим-карту?">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- РАЗМЕТКА НАЧАЛО -->
@@ -27,8 +27,8 @@
 <meta property="og:image:width" content="889" />
 <meta property="og:image:height" content="500" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:description" content="Как обычному человеку узнать свой баланс в Тинькофф Мобайл? Проверка происходит короткой командой цифр или через Мобильно приложение на смартфоне." />
-<meta name="twitter:title" content="Баланс Тинькофф.Мобайл: как узнать, проверить, пополнить" />
+<meta name="twitter:description" content="Пошаговая инструкция по активации сим-карты Тинькофф Мобайл. Как узнать свой номер телефона? Как заблокировать сим-карту?" />
+<meta name="twitter:title" content="Тинькофф Мобайл - Оператор Связи: Активация сим, Узнать номер, Заблокировать" />
 <meta name="twitter:image" content="/img/free_calls_slider.jpg" />
 <!-- РАЗМЕТКА КОНЕЦ -->
         <!-- fonts
