--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 									<li><a href="#otzivy">Отзывы</a></li>
 									<li><a href="#akcii">Акции</a></li>
 									<li><a href="/faq">FAQ</a></li>
-									<li><a href="https://www.tinkoff.ru/mobile-operator/" class="bonus">1000р за перенос номера</a></li>
+									<li><a href="https://go.liknot.ru/?offer_id=602&wmid=1381" class="bonus">1000р за перенос номера</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -192,7 +192,7 @@
 						<p><a href="#otr" class="dot">Отрицательные отзывы</a></p>
 						<p><a href="#opyt" class="dot">Мой отзыв о Тинькофф Мобайл / Личный опыт</a></p>
                         <p><a href="#app" class="dot-b">Приложения для смартфона</a></p>
-                        <p><a href="https://www.tinkoff.ru/mobile-operator/" class="dot-to">Заказать сим карту Тинькофф Мобайл</a></p>
+                        <p><a href="https://go.liknot.ru/?offer_id=602&wmid=1381" class="dot-to">Заказать сим карту Тинькофф Мобайл</a></p>
 						
                     </div>
 					<!--Содержание --->
@@ -472,7 +472,7 @@
 							
                             <div class="featured-post-curosel">
 							<div class="single-featured-post">
-                                    <a href="https://www.tinkoff.ru/mobile-operator/" target="#"><img src="img/free_calls_slider.jpg" alt=""></a>
+                                    <a href="https://go.liknot.ru/?offer_id=602&wmid=1381" target="#"><img src="img/free_calls_slider.jpg" alt=""></a>
                                     <div class="post-text fix">
                                         <h2 class="sidebar-post-title">БЕСПЛАТНЫЕ ЗВОНКИ</h2>
                                         <p>Клиентам банка Тинькофф связь - бесплатно! Получите 600 минут каждый месяц в течение целого года. </p>
@@ -480,7 +480,7 @@
                                     </div>
                                 </div>
                                 <div class="single-featured-post">
-                                    <a href="https://www.tinkoff.ru/mobile-operator/" target="#"><img src="img/2sim_slider.gif" alt=""></a>
+                                    <a href="https://go.liknot.ru/?offer_id=602&wmid=1381" target="#"><img src="img/2sim_slider.gif" alt=""></a>
                                     <div class="post-text fix">
                                         <h2 class="sidebar-post-title">ВИРТУАЛЬНАЯ СИМ-КАРТА</h2>
                                         <p>Два номера на одной сим-карте. Когда не хотите раскрывать основной. Не платите за две сим-карты </p>
@@ -488,7 +488,7 @@
                                     </div>
                                 </div>
                                 <div class="single-featured-post">
-                                    <a href="https://www.tinkoff.ru/mobile-operator/" target="#"><img src="img/first_month.jpg" alt=""></a>
+                                    <a href="https://go.liknot.ru/?offer_id=602&wmid=1381" target="#"><img src="img/first_month.jpg" alt=""></a>
                                     <div class="post-text fix">
                                         <h2 class="sidebar-post-title">БЕСПЛАТНО В ПЕРВЫЙ МЕСЯЦ</h2>
                                         <p>600 минут, 30 гигабайт, безлимитные смс + соцсети. Все бесплатно в первый месяц</p>
@@ -496,7 +496,7 @@
                                     </div>
                                 </div>
 								 <div class="single-featured-post">
-                                    <a href="https://www.tinkoff.ru/mobile-operator/" target="#"><img src="img/1000r_slider.jpg" alt=""></a>
+                                    <a href="https://go.liknot.ru/?offer_id=602&wmid=1381" target="#"><img src="img/1000r_slider.jpg" alt=""></a>
                                     <div class="post-text fix">
                                         <h2 class="sidebar-post-title">1000 Рублей за перенос номера</h2>
                                         <p>Бонусные 1000 рублей за перенос своего номера к Тинькофф Мобайл от другого оператора</p>
@@ -595,7 +595,7 @@
 					<!--banner -->
 				<div class="col-lg-4 col-md-4 col-sm-4">
 				<div class="single-instagram">
-                            <a href="https://www.tinkoff.ru/mobile-operator/">
+                            <a href="https://go.liknot.ru/?offer_id=602&wmid=1381">
                                 <img src="img/mobile_banner.gif" alt="">
                                 <span class="moretag"></span>
                             </a>
